--- a/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
@@ -30,12 +30,12 @@
         </div>
 
         @* "File upload" attribute control type requries "multipart/form-data" *@
-        <form asp-route="ShoppingCart" id="frm-shopping-cart" method="post" enctype="multipart/form-data">
+        <form asp-route="ShoppingCart" id="frm-shopping-cart" method="post" enctype="multipart/form-data" aria-label="@T("ShoppingCart")">
             <div class="row cart-container">
                 @* Cart Items *@
                 <div class="col-lg-7 col-xl-8">
                     <div id="cart-items" class="cart" attr-class='(Model.IsEditable, "cart-editable")'>
-                        <div role="list" class="cart-body">
+                        <div role="list" class="cart-body" aria-label="@T("ShoppingCart")">
                             <partial name="CartItems" model="Model" />
                         </div>
                     </div>
