--- a/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItem.BundleItems.cshtml
@@ -15,9 +15,9 @@
 @for (var i = 0; i < bundleItems.Length; i++)
 {
     var item = bundleItems[i];
-    var label = @T("Aria.Label.BundleContains", item.ProductName);
+    var itemLabel = T("Aria.Label.BundleContains", item.ProductName);
     <div role="listitem"
-         aria-label="@label"
+         aria-label="@itemLabel"
          class="cart-row cart-row-child"
          attr-class='(!item.Active, "cart-item-inactive")'
          data-key="@item.Id" 
@@ -61,7 +61,7 @@
                             <a class="cart-item-link" 
                                href="@item.ProductUrl" 
                                title="@T("Products.Details")"
-                               aria-label="@label"
+                               aria-label="@itemLabel"
                                sm-language-attributes-for="item.ProductName">
                                 @item.ProductName
                             </a>
