--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
@@ -38,14 +38,14 @@
             </span>
         </div>
 
-        <div class="offcanvas-cart-items" role="list">
+        <div class="offcanvas-cart-items" role="list" aria-labelledby="cart-tab">
             @foreach (var item in Model.Items)
             {
                 var bundleItemsWithImages = item.BundleItems
                     .Where(x => x.ImageModel?.HasImage() == true)
                     .ToArray();
 
-                <div class="offcanvas-cart-item" attr-class='(!item.Active, "offcanvas-cart-item-inactive")' role="listitem">
+                <div class="offcanvas-cart-item" attr-class='(!item.Active, "offcanvas-cart-item-inactive")' role="listitem" aria-labelledby="cart-item-link-@(item.Id)">
                     <div class="row sm-gutters">
                         <div sm-if="Model.ShowProductImages" class="col col-image col-alpha">
                             <a sm-if="item.Image.HasImage()" class="img-center-container" href="@item.ProductUrl" aria-hidden="true" tabindex="-1">
