Attribute combination image could not be selected on product edit page

--- a/src/Smartstore.Web/wwwroot/shared/_choice.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_choice.scss
@@ -209,7 +209,8 @@ label.required,
     }
 }
 
-.choice-box-control-native:checked + .choice-box-label {
+.choice-box-control-native:checked + .choice-box-label,
+.choice-box-control-native:checked + .choice-box-content {
     .choice-box-element {
         border-color: $gray-700;
         box-shadow: inset 0 0 0 2px rgba($white, 1);
