--- a/src/Smartstore.Web/Views/Catalog/ProductsByTag.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/ProductsByTag.cshtml
@@ -12,22 +12,21 @@
     }
 
     ViewBag.HideLeftCol = true; // ...on mobile
+
+    var languageAttributes = Model.TagName.HasValue() && Model.TagName.BidiOverride && Model.TagName.CurrentLanguage.Rtl
+        ? $" lang=\"{Model.TagName.CurrentLanguage.GetTwoLetterISOLanguageName()}\" dir=\"rtl\""
+        : string.Empty;
 }
 
 <widget target-zone="left">
     <partial name="Search.Filters" model="Model.Products" />
 </widget>
 
-<div class="page product-tag-page">
+<div class="page product-tag-page" role="main" aria-labelledby="page-title">
     <div class="page-title">
-        @{
-            var langAttrs = string.Empty;
-            if (Model.TagName.HasValue() && Model.TagName.BidiOverride && Model.TagName.CurrentLanguage.Rtl)
-            {
-                langAttrs = $" lang=\"{Model.TagName.CurrentLanguage.GetTwoLetterISOLanguageName()}\" dir=\"rtl\"";
-            }
-        }
-        <h1 class="h3 d-flex align-items-baseline">@Html.Raw(T("Products.Tags.ProductsTaggedWith", $"<small{langAttrs} class='search-term'>{Model.TagName}</small>"))</h1>
+        <h1 id="page-title" class="h3 d-flex align-items-baseline">
+            @Html.Raw(T("Products.Tags.ProductsTaggedWith", $"<small{languageAttributes} class='search-term'>{Model.TagName}</small>"))
+        </h1>
 
         @if (Model.SearchResult.TotalHitsCount > 0)
         {
