--- a/src/Smartstore.Web/Views/Catalog/RecentlyAddedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/RecentlyAddedProducts.cshtml
@@ -9,11 +9,11 @@
     var rssLinkTitle = T("Products.NewProducts.RSS.Hint");
 }
 
-<div class="page recently-added-products-page">
+<div class="page recently-added-products-page" role="main" aria-labelledby="page-title">
     <div class="row align-items-center">
         <div class="col">
             <div class="heading">
-                <h1 class="heading-title">@T("Products.NewProducts")</h1>
+                <h1 id="page-title" class="heading-title">@T("Products.NewProducts")</h1>
             </div>
         </div>
 
