--- a/src/Smartstore.Web/Views/Identity/Login.cshtml
+++ b/src/Smartstore.Web/Views/Identity/Login.cshtml
@@ -127,11 +127,11 @@
     }
 }
 
-<div class="page login-page">
+<div class="page login-page" role="main" aria-labelledby="page-title">
     <div class="row mb-4">
         <div class="col-12 col-md-10 offset-md-1 col-xl-8 offset-xl-2">
             <div class="page-title">
-                <h1>@T("Account.Login.Welcome")</h1>
+                <h1 id="page-title">@T("Account.Login.Welcome")</h1>
             </div>
             <div class="card shadow-sm rounded-lg overflow-hidden">
                 <div class="row">
