--- a/src/Smartstore.Web/Views/Home/StoreClosed.cshtml
+++ b/src/Smartstore.Web/Views/Home/StoreClosed.cshtml
@@ -5,9 +5,9 @@
     Assets.BodyAttributes.AppendCssClass("store-closed");
 }
 
-<div class="page store-closed-page">
+<div class="page store-closed-page" role="main" aria-labelledby="page-title">
     <div class="page-title">
-        <h1>@T("StoreClosed")</h1>
+        <h1 id="page-title">@T("StoreClosed")</h1>
     </div>
     <div class="page-body" role="alert">
         @T("StoreClosed.Hint")
