--- a/src/Smartstore.Web/Views/Identity/AccountActivation.cshtml
+++ b/src/Smartstore.Web/Views/Identity/AccountActivation.cshtml
@@ -2,9 +2,9 @@
     Assets.AppendTitleParts(T("PageTitle.AccountActivation"));
 }
 
-<div class="page account-activation-page">
+<div class="page account-activation-page" role="main" aria-labelledby="page-title">
     <div class="page-title">
-        <h1>@T("Account.AccountActivation")</h1>
+        <h1 id="page-title">@T("Account.AccountActivation")</h1>
     </div>
     <div class="page-body">
         <div class="alert alert-success" role="alert">
