WCAG: Generic SkipNav handler with smooth scrolling

--- a/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
@@ -29,7 +29,7 @@
     }
 }
 
-<a href="#content-center" id="skip-to-content" class="btn btn-primary btn-lg rounded-pill">
+<a href="#content-center" id="skip-to-content" class="btn-skip-content btn btn-primary btn-lg rounded-pill">
     @T("Common.SkipToMainContent")
 </a>
 
