--- a/src/Smartstore.Web/wwwroot/shared/_accessibility.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_accessibility.scss
@@ -45,7 +45,7 @@
     overflow: visible;
 }
 
-#skip-to-content {
+.btn-skip-content {
     position: absolute;
     top: 0;
     inset-inline-start: 0;
