WCAG: SkipNav for all .artlist instances

--- a/src/Smartstore.Web/Views/Shared/Partials/_ClientRes.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/_ClientRes.cshtml
@@ -20,6 +20,7 @@
         "Common.DontShowAgain",
         "Common.MoveUp",
         "Common.MoveDown",
+        "Common.SkipList",
         "Common.CopyToClipboard",
         "Common.CopyToClipboard.Failed",
         "Common.CopyToClipboard.Succeeded",
