--- a/src/Smartstore.Web/Views/Shared/Components/PopularProductTags/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/PopularProductTags/Default.cshtml
@@ -19,7 +19,10 @@
         </div>
     </div>
 
-    <div class="listbox block-body">
+    <div class="listbox block-body position-relative">
+        <a href="javascript;:" class="btn-skip-content btn btn-primary btn-lg rounded-pill">
+            @T("Common.SkipList")
+        </a>
         <div class="tags fs-h4">
             <ul class="list-inline">
                 @foreach (var item in Model.Tags)
