--- a/src/Smartstore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
@@ -21,9 +21,9 @@
     <partial name="Search.Filters" model="Model.Products" />
 </widget>
 
-<div class="page manufacturer-page" role="main" aria-labelledby="page-title">
+<div class="page manufacturer-page">
     <div class="page-title">
-        <h1 id="page-title" sm-language-attributes-for="Model.Name" class="h3">
+        <h1 sm-language-attributes-for="Model.Name" class="h3">
             @Html.Raw(Model.Name)
         </h1>
         @if (Model.SearchResult.TotalHitsCount > 0)
