--- a/src/Smartstore.Web/Views/Home/Index.cshtml
+++ b/src/Smartstore.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     Assets.AppendMetaKeywordsParts((string)ViewBag.MetaKeywords);
 }
 
-<div class="page home-page" role="main">
+<div class="page home-page">
     <div class="page-body">
         <zone name="home_page_top" /> 
 
