--- a/src/Smartstore.Web/Views/Identity/CustomerProfile.cshtml
+++ b/src/Smartstore.Web/Views/Identity/CustomerProfile.cshtml
@@ -7,9 +7,9 @@
     Assets.AppendTitleParts(T("PageTitle.Profile"));
 }
 
-<div class="page profile-page" role="main" aria-labelledby="page-title">
+<div class="page profile-page">
     <div class="page-title">
-        <h1 id="page-title" class="h2">@T("Profile.ProfileOf", Model.CustomerName)</h1>
+        <h1 class="h2">@T("Profile.ProfileOf", Model.CustomerName)</h1>
     </div>
     <div class="page-body">
         <tabstrip id="profile-tabs" class="profile-tabs" sm-nav-style="Material" sm-smart-tab-selection="false">
