--- a/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
@@ -80,11 +80,11 @@
                         </aside>
                     }
 
-                    <div id="content-center" class="col-lg-@mainColspan">
+                    <main id="content-center" class="col-lg-@mainColspan">
                         <zone name="main_column_before"></zone>
                         @RenderBody()
                         <zone name="main_column_after"></zone>
-                    </div>
+                    </main>
 
                     @if (hasRightCol)
                     {
