--- a/src/Smartstore.Web/Views/Catalog/ManufacturerAll.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/ManufacturerAll.cshtml
@@ -32,7 +32,7 @@
     }
 }
 
-<div class="page manufacturer-list-page" role="main" aria-labelledby="page-title">
+<div class="page manufacturer-list-page">
     <div class="page-title">
         <h1 id="page-title" class="h2">@T("Manufacturers.List")</h1>
     </div>
