--- a/src/Smartstore.Web/Views/Catalog/ProductsByTag.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/ProductsByTag.cshtml
@@ -22,9 +22,9 @@
     <partial name="Search.Filters" model="Model.Products" />
 </widget>
 
-<div class="page product-tag-page" role="main" aria-labelledby="page-title">
+<div class="page product-tag-page">
     <div class="page-title">
-        <h1 id="page-title" class="h3 d-flex align-items-baseline">
+        <h1 class="h3 d-flex align-items-baseline">
             @Html.Raw(T("Products.Tags.ProductsTaggedWith", $"<small{languageAttributes} class='search-term'>{Model.TagName}</small>"))
         </h1>
 
