--- a/src/Smartstore.Web/Views/Catalog/RecentlyViewedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/RecentlyViewedProducts.cshtml
@@ -7,9 +7,9 @@
     Assets.AppendMetaDescriptionParts(T("PageDescription.RecentlyViewedProducts", CommonServices.StoreContext.CurrentStore.Name));
 }
 
-<div class="page recently-viewed-products-page" role="main" aria-labelledby="page-title">
+<div class="page recently-viewed-products-page">
     <div class="heading mb-4">
-        <h3 id="page-title" class="heading-title fs-h1">@T("Products.RecentlyViewedProducts")</h3>
+        <h3 class="heading-title fs-h1">@T("Products.RecentlyViewedProducts")</h3>
     </div>
 
     <div class="page-body">
