--- a/src/Smartstore.Web/Views/Identity/PasswordRecoveryConfirm.cshtml
+++ b/src/Smartstore.Web/Views/Identity/PasswordRecoveryConfirm.cshtml
@@ -6,9 +6,9 @@
     Assets.AppendTitleParts(T("PageTitle.PasswordRecovery"));
 }
 
-<div class="page password-recovery-page" role="main" aria-labelledby="page-title">
+<div class="page password-recovery-page">
     <div class="page-title">
-        <h1 id="page-title">@T("Account.PasswordRecovery")</h1>
+        <h1>@T("Account.PasswordRecovery")</h1>
     </div>
 
     <div class="page-body">
