--- a/src/Smartstore.Web/Views/Identity/Register.cshtml
+++ b/src/Smartstore.Web/Views/Identity/Register.cshtml
@@ -8,9 +8,9 @@
 }
 
 <form asp-route="Register" asp-route-returnUrl="@returnUrl" id="register-form" method="post" class="form-horizontal">
-    <div class="page registration-page" role="main" aria-labelledby="page-title">
+    <div class="page registration-page">
         <div class="page-title">
-            <h1 id="page-title" class="h3">@T("Account.Register")</h1>
+            <h1 class="h3">@T("Account.Register")</h1>
         </div>
         <div class="page-body row">
             <div class="col-12 col-lg-9 col-xl-8">
