--- a/src/Smartstore.Web/Views/Identity/RegisterResult.cshtml
+++ b/src/Smartstore.Web/Views/Identity/RegisterResult.cshtml
@@ -8,9 +8,9 @@
     }
 }
 
-<div class="page registration-result-page" role="main" aria-labelledby="page-title">
+<div class="page registration-result-page">
     <div class="page-title">
-        <h1 id="page-title">@T("Account.Register")</h1>
+        <h1>@T("Account.Register")</h1>
     </div>
 
     <div class="page-body">
