--- a/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
@@ -3,7 +3,7 @@
     Assets.BodyAttributes.AppendCssClass("myaccount-page");
 }
 
-<div class="page page-myaccount page-myaccount-@ViewBag.PageClassToken" role="main" aria-label="@T("Account.MyAccount")">
+<div class="page page-myaccount page-myaccount-@ViewBag.PageClassToken">
     <div class="page-body">
         <div class="row">
             <div class="col-md-4 col-lg-3 d-print-none">
